--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,12 @@ description: Dart package for M-Pesa API (Mozambique)
 version: 0.0.1
 author: Ergito Vilanculos <ergitorubildo@gmail.com>
 repository: https://github.com/realrgt/mpesa_sdk_dart
+homepage: https://github.com/realrgt/mpesa_sdk_dart
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   pointycastle: ^1.0.2
   asn1lib: ^0.6.4
   http: ^0.12.1
