--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,10 +6,10 @@ repository: https://github.com/realrgt/mpesa_sdk_dart
 homepage: https://github.com/realrgt/mpesa_sdk_dart
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  pointycastle: ^1.0.2
-  asn1lib: ^0.6.4
-  http: ^0.12.1
+  pointycastle: ^3.0.1
+  asn1lib: ^1.0.0
+  http: ^0.13.1
   
