--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,14 @@
 name: mpesa_sdk_dart
 description: A Dart package for M-Pesa API (Mozambique). This package can be used in every dart frameworks as it's written in plain dart.
-version: 1.0.0
+version: 1.0.1
 author: Ergito Vilanculos <ergitorubildo@gmail.com>
 repository: https://github.com/realrgt/mpesa_sdk_dart
 homepage: https://github.com/realrgt/mpesa_sdk_dart
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   pointycastle: ^3.0.1
   asn1lib: ^1.0.0
   http: ^0.13.1
-  
